--- a/about-minimal-portfolio/index.html
+++ b/about-minimal-portfolio/index.html
@@ -130,7 +130,7 @@ html:not(.page-trans-loaded) { background-color: #ffffff; }
 	<div class="container main-content">
 		<div class="row">
 			
-		<div id="fws_6287e200e8a39" data-column-margin="default" data-midnight="dark" data-top-percent="4%" data-bottom-percent="7%" class="wpb_row vc_row-fluid vc_row top-level full-width-section vc_row-o-equal-height vc_row-flex vc_row-o-content-middle" style="padding-top: calc(100vw * 0.04); padding-bottom: calc(100vw * 0.07); "><div class="row-bg-wrap" data-bg-animation="none" data-bg-overlay="false"><div class="inner-wrap"><div class="row-bg viewport-desktop using-bg-color" style="background-color: #ffffff; "></div></div></div><div class="row_col_wrap_12 col span_12 dark left">
+		<div id="fws_6287e66938a75" data-column-margin="default" data-midnight="dark" data-top-percent="4%" data-bottom-percent="7%" class="wpb_row vc_row-fluid vc_row top-level full-width-section vc_row-o-equal-height vc_row-flex vc_row-o-content-middle" style="padding-top: calc(100vw * 0.04); padding-bottom: calc(100vw * 0.07); "><div class="row-bg-wrap" data-bg-animation="none" data-bg-overlay="false"><div class="inner-wrap"><div class="row-bg viewport-desktop using-bg-color" style="background-color: #ffffff; "></div></div></div><div class="row_col_wrap_12 col span_12 dark left">
 	<div class="vc_col-sm-6 wpb_column column_container vc_column_container col no-extra-padding" data-padding-pos="all" data-has-bg-color="false" data-bg-color="" data-bg-opacity="1" data-animation="" data-delay="0">
 		<div class="vc_column-inner">
 			<div class="wpb_wrapper">
@@ -159,7 +159,7 @@ html:not(.page-trans-loaded) { background-color: #ffffff; }
 
 
 
-<div class="divider-wrap" data-alignment="default"><div style="height: 50px;" class="divider"></div></div><h5 style="color: #bfbfbf;text-align: left" class="vc_custom_heading vc_custom_1485193623501">What I Do</h5><div id="fws_6287e200eb403" data-midnight="" data-column-margin="default" class="wpb_row vc_row-fluid vc_row inner_row" style=""><div class="row-bg-wrap"> <div class="row-bg"></div> </div><div class="row_col_wrap_12_inner col span_12  left">
+<div class="divider-wrap" data-alignment="default"><div style="height: 50px;" class="divider"></div></div><h5 style="color: #bfbfbf;text-align: left" class="vc_custom_heading vc_custom_1485193623501">What I Do</h5><div id="fws_6287e6693b2cf" data-midnight="" data-column-margin="default" class="wpb_row vc_row-fluid vc_row inner_row" style=""><div class="row-bg-wrap"> <div class="row-bg"></div> </div><div class="row_col_wrap_12_inner col span_12  left">
 	<div class="vc_col-sm-6 wpb_column column_container vc_column_container col child_column no-extra-padding" data-padding-pos="all" data-has-bg-color="false" data-bg-color="" data-bg-opacity="1" data-animation="" data-delay="0">
 		<div class="vc_column-inner">
 		<div class="wpb_wrapper">
