--- a/awesometramp-github/contact-minimal-portfolio/index.html
+++ b/awesometramp-github/contact-minimal-portfolio/index.html
@@ -129,7 +129,7 @@ html:not(.page-trans-loaded) { background-color: #ffffff; }
 	<div class="container main-content">
 		<div class="row">
 			
-		<div id="fws_6287e204af193" data-column-margin="default" data-midnight="dark" data-top-percent="5%" class="wpb_row vc_row-fluid vc_row top-level" style="padding-top: calc(100vw * 0.05); padding-bottom: 0px; "><div class="row-bg-wrap" data-bg-animation="none" data-bg-overlay="false"><div class="inner-wrap"><div class="row-bg viewport-desktop" style=""></div></div></div><div class="row_col_wrap_12 col span_12 dark left">
+		<div id="fws_6287e66cf2bab" data-column-margin="default" data-midnight="dark" data-top-percent="5%" class="wpb_row vc_row-fluid vc_row top-level" style="padding-top: calc(100vw * 0.05); padding-bottom: 0px; "><div class="row-bg-wrap" data-bg-animation="none" data-bg-overlay="false"><div class="inner-wrap"><div class="row-bg viewport-desktop" style=""></div></div></div><div class="row_col_wrap_12 col span_12 dark left">
 	<div class="vc_col-sm-6 wpb_column column_container vc_column_container col no-extra-padding" data-padding-pos="all" data-has-bg-color="false" data-bg-color="" data-bg-opacity="1" data-animation="" data-delay="0">
 		<div class="vc_column-inner">
 			<div class="wpb_wrapper">
@@ -155,7 +155,7 @@ html:not(.page-trans-loaded) { background-color: #ffffff; }
 		</div>
 	</div> 
 </div></div>
-		<div id="fws_6287e204b034e" data-column-margin="default" data-midnight="dark" data-top-percent="5%" data-bottom-percent="3%" class="wpb_row vc_row-fluid vc_row full-width-section" style="padding-top: calc(100vw * 0.05); padding-bottom: calc(100vw * 0.03); "><div class="row-bg-wrap" data-bg-animation="none" data-bg-overlay="false"><div class="inner-wrap"><div class="row-bg viewport-desktop" style=""></div></div></div><div class="row_col_wrap_12 col span_12 dark left">
+		<div id="fws_6287e66cf39ae" data-column-margin="default" data-midnight="dark" data-top-percent="5%" data-bottom-percent="3%" class="wpb_row vc_row-fluid vc_row full-width-section" style="padding-top: calc(100vw * 0.05); padding-bottom: calc(100vw * 0.03); "><div class="row-bg-wrap" data-bg-animation="none" data-bg-overlay="false"><div class="inner-wrap"><div class="row-bg viewport-desktop" style=""></div></div></div><div class="row_col_wrap_12 col span_12 dark left">
 	<div class="vc_col-sm-4 wpb_column column_container vc_column_container col padding-2-percent" data-padding-pos="top-bottom" data-has-bg-color="false" data-bg-color="" data-bg-opacity="1" data-animation="" data-delay="0">
 		<div class="vc_column-inner">
 			<div class="wpb_wrapper">
@@ -207,11 +207,11 @@ html:not(.page-trans-loaded) { background-color: #ffffff; }
 		</div>
 	</div> 
 </div></div>
-		<div id="fws_6287e204b1395" data-column-margin="default" data-midnight="dark" class="wpb_row vc_row-fluid vc_row full-width-content vc_row-o-equal-height vc_row-flex vc_row-o-content-top" style="padding-top: 0px; padding-bottom: 0px; "><div class="row-bg-wrap" data-bg-animation="none" data-bg-overlay="false"><div class="inner-wrap"><div class="row-bg viewport-desktop" style=""></div></div></div><div class="row_col_wrap_12 col span_12 dark left">
+		<div id="fws_6287e66d00736" data-column-margin="default" data-midnight="dark" class="wpb_row vc_row-fluid vc_row full-width-content vc_row-o-equal-height vc_row-flex vc_row-o-content-top" style="padding-top: 0px; padding-bottom: 0px; "><div class="row-bg-wrap" data-bg-animation="none" data-bg-overlay="false"><div class="inner-wrap"><div class="row-bg viewport-desktop" style=""></div></div></div><div class="row_col_wrap_12 col span_12 dark left">
 	<div class="vc_col-sm-12 wpb_column column_container vc_column_container col no-extra-padding" data-padding-pos="all" data-has-bg-color="false" data-bg-color="" data-bg-opacity="1" data-animation="" data-delay="0">
 		<div class="vc_column-inner">
 			<div class="wpb_wrapper">
-				<div id="map_6287e204b1888" style="height: 700px;" class="nectar-google-map" data-infowindow-start-open="" data-dark-color-scheme="" data-marker-style="nectar" data-nectar-marker-color="accent-color" data-ultra-flat="1" data-greyscale="1" data-extra-color="" data-enable-animation="false" data-enable-zoom="1" data-zoom-level="14" data-center-lat="40.793" data-center-lng="-73.954" data-marker-img=""></div><div class="map_6287e204b1888 map-marker-list"><div class="map-marker" data-marker-image-width="50" data-marker-image-height="50" data-lat="39.949" data-lng="-75.171" data-mapinfo="Our Location<br />"></div><div class="map-marker" data-marker-image-width="50" data-marker-image-height="50" data-lat="40.793" data-lng="-73.954" data-mapinfo="Our Location #2"></div></div>
+				<div id="map_6287e66d00c08" style="height: 700px;" class="nectar-google-map" data-infowindow-start-open="" data-dark-color-scheme="" data-marker-style="nectar" data-nectar-marker-color="accent-color" data-ultra-flat="1" data-greyscale="1" data-extra-color="" data-enable-animation="false" data-enable-zoom="1" data-zoom-level="14" data-center-lat="40.793" data-center-lng="-73.954" data-marker-img=""></div><div class="map_6287e66d00c08 map-marker-list"><div class="map-marker" data-marker-image-width="50" data-marker-image-height="50" data-lat="39.949" data-lng="-75.171" data-mapinfo="Our Location<br />"></div><div class="map-marker" data-marker-image-width="50" data-marker-image-height="50" data-lat="40.793" data-lng="-73.954" data-mapinfo="Our Location #2"></div></div>
 			</div> 
 		</div>
 	</div> 
