--- a/portfolio/salient-concert-promo/index.html
+++ b/portfolio/salient-concert-promo/index.html
@@ -201,7 +201,7 @@ html:not(.page-trans-loaded) { background-color: #ffffff; }
   
 	  
 	<div id="portfolio-extra">
-		<div id="fws_6287e2167ee1f" data-column-margin="default" data-midnight="dark" data-top-percent="10%" data-bottom-percent="10%" class="wpb_row vc_row-fluid vc_row full-width-section" style="padding-top: calc(100vw * 0.10); padding-bottom: calc(100vw * 0.10); "><div class="row-bg-wrap" data-bg-animation="none" data-bg-overlay="false"><div class="inner-wrap"><div class="row-bg viewport-desktop" style=""></div></div></div><div class="row_col_wrap_12 col span_12 dark left">
+		<div id="fws_6287e67e86fb4" data-column-margin="default" data-midnight="dark" data-top-percent="10%" data-bottom-percent="10%" class="wpb_row vc_row-fluid vc_row full-width-section" style="padding-top: calc(100vw * 0.10); padding-bottom: calc(100vw * 0.10); "><div class="row-bg-wrap" data-bg-animation="none" data-bg-overlay="false"><div class="inner-wrap"><div class="row-bg viewport-desktop" style=""></div></div></div><div class="row_col_wrap_12 col span_12 dark left">
 	<div class="vc_col-sm-2 vc_col-xs-6 wpb_column column_container vc_column_container col no-extra-padding" data-padding-pos="all" data-has-bg-color="false" data-bg-color="" data-bg-opacity="1" data-animation="" data-delay="0">
 		<div class="vc_column-inner">
 			<div class="wpb_wrapper">
@@ -302,7 +302,7 @@ html:not(.page-trans-loaded) { background-color: #ffffff; }
 		</div>
 	</div> 
 </div></div>
-		<div id="fws_6287e216800eb" data-column-margin="default" data-midnight="dark" data-top-percent="10%" data-bottom-percent="10%" class="wpb_row vc_row-fluid vc_row full-width-section" style="padding-top: calc(100vw * 0.10); padding-bottom: calc(100vw * 0.10); "><div class="row-bg-wrap" data-bg-animation="none" data-bg-overlay="false"><div class="inner-wrap"><div class="row-bg viewport-desktop using-bg-color" style="background-color: #f4f4f4; "></div></div></div><div class="row_col_wrap_12 col span_12 dark left">
+		<div id="fws_6287e67e87f9d" data-column-margin="default" data-midnight="dark" data-top-percent="10%" data-bottom-percent="10%" class="wpb_row vc_row-fluid vc_row full-width-section" style="padding-top: calc(100vw * 0.10); padding-bottom: calc(100vw * 0.10); "><div class="row-bg-wrap" data-bg-animation="none" data-bg-overlay="false"><div class="inner-wrap"><div class="row-bg viewport-desktop using-bg-color" style="background-color: #f4f4f4; "></div></div></div><div class="row_col_wrap_12 col span_12 dark left">
 	<div class="vc_col-sm-5 vc_col-xs-12 wpb_column column_container vc_column_container col no-extra-padding" data-padding-pos="all" data-has-bg-color="false" data-bg-color="" data-bg-opacity="1" data-animation="" data-delay="0">
 		<div class="vc_column-inner">
 			<div class="wpb_wrapper">
@@ -334,7 +334,7 @@ html:not(.page-trans-loaded) { background-color: #ffffff; }
 	<div class="vc_col-sm-7 vc_col-xs-12 wpb_column column_container vc_column_container col no-extra-padding" data-padding-pos="all" data-has-bg-color="false" data-bg-color="" data-bg-opacity="1" data-animation="" data-delay="0">
 		<div class="vc_column-inner">
 			<div class="wpb_wrapper">
-				<div id="fws_6287e216816d4" data-midnight="" data-column-margin="none" class="wpb_row vc_row-fluid vc_row inner_row vc_row-o-equal-height vc_row-flex vc_row-o-content-bottom" style=""><div class="row-bg-wrap"> <div class="row-bg"></div> </div><div class="row_col_wrap_12_inner col span_12  left">
+				<div id="fws_6287e67e89553" data-midnight="" data-column-margin="none" class="wpb_row vc_row-fluid vc_row inner_row vc_row-o-equal-height vc_row-flex vc_row-o-content-bottom" style=""><div class="row-bg-wrap"> <div class="row-bg"></div> </div><div class="row_col_wrap_12_inner col span_12  left">
 	<div style=" color: #ffffff;" class="vc_col-sm-4 wpb_column column_container vc_column_container col child_column has-animation padding-7-percent" data-cfc="true" data-using-bg="true" data-padding-pos="top" data-has-bg-color="true" data-bg-color="#417e94" data-bg-opacity="1" data-animation="grow-in" data-delay="0">
 		<div class="vc_column-inner"><div class="column-bg-overlay-wrap column-bg-layer" data-bg-animation="none"><div class="column-bg-overlay" style="opacity: 1; background-color: #417e94;"></div></div>
 		<div class="wpb_wrapper">
@@ -417,7 +417,7 @@ html:not(.page-trans-loaded) { background-color: #ffffff; }
 		</div>
 	</div> 
 </div></div>
-		<div id="fws_6287e21682a29" data-column-margin="default" data-midnight="light" data-top-percent="25%" data-bottom-percent="25%" class="wpb_row vc_row-fluid vc_row full-width-section parallax_section" style="padding-top: calc(100vw * 0.25); padding-bottom: calc(100vw * 0.25); "><div class="row-bg-wrap" data-bg-animation="none" data-bg-overlay="false"><div class="inner-wrap using-image"><div class="row-bg viewport-desktop using-image using-bg-color" data-parallax-speed="fast" style="background-image: url(https://source.unsplash.com/daily/?concert); background-position: center center; background-repeat: no-repeat; background-color: #333333; "></div></div></div><div class="row_col_wrap_12 col span_12 light left">
+		<div id="fws_6287e67e8a685" data-column-margin="default" data-midnight="light" data-top-percent="25%" data-bottom-percent="25%" class="wpb_row vc_row-fluid vc_row full-width-section parallax_section" style="padding-top: calc(100vw * 0.25); padding-bottom: calc(100vw * 0.25); "><div class="row-bg-wrap" data-bg-animation="none" data-bg-overlay="false"><div class="inner-wrap using-image"><div class="row-bg viewport-desktop using-image using-bg-color" data-parallax-speed="fast" style="background-image: url(https://source.unsplash.com/daily/?concert); background-position: center center; background-repeat: no-repeat; background-color: #333333; "></div></div></div><div class="row_col_wrap_12 col span_12 light left">
 	<div class="vc_col-sm-12 wpb_column column_container vc_column_container col no-extra-padding" data-padding-pos="all" data-has-bg-color="false" data-bg-color="" data-bg-opacity="1" data-animation="" data-delay="0">
 		<div class="vc_column-inner">
 			<div class="wpb_wrapper">
@@ -426,7 +426,7 @@ html:not(.page-trans-loaded) { background-color: #ffffff; }
 		</div>
 	</div> 
 </div></div>
-		<div id="fws_6287e2168300e" data-column-margin="default" data-midnight="dark" data-top-percent="8%" data-bottom-percent="8%" class="wpb_row vc_row-fluid vc_row full-width-section" style="padding-top: calc(100vw * 0.08); padding-bottom: calc(100vw * 0.08); "><div class="row-bg-wrap" data-bg-animation="none" data-bg-overlay="false"><div class="inner-wrap"><div class="row-bg viewport-desktop" style=""></div></div></div><div class="row_col_wrap_12 col span_12 dark left">
+		<div id="fws_6287e67e8ab9c" data-column-margin="default" data-midnight="dark" data-top-percent="8%" data-bottom-percent="8%" class="wpb_row vc_row-fluid vc_row full-width-section" style="padding-top: calc(100vw * 0.08); padding-bottom: calc(100vw * 0.08); "><div class="row-bg-wrap" data-bg-animation="none" data-bg-overlay="false"><div class="inner-wrap"><div class="row-bg viewport-desktop" style=""></div></div></div><div class="row_col_wrap_12 col span_12 dark left">
 	<div class="vc_col-sm-3 wpb_column column_container vc_column_container col no-extra-padding" data-padding-pos="all" data-has-bg-color="false" data-bg-color="" data-bg-opacity="1" data-animation="" data-delay="0">
 		<div class="vc_column-inner">
 			<div class="wpb_wrapper">
@@ -469,7 +469,7 @@ html:not(.page-trans-loaded) { background-color: #ffffff; }
 		</div>
 	</div> 
 </div></div>
-		<div id="fws_6287e21683b9a" data-column-margin="default" data-midnight="light" data-top-percent="6%" data-bottom-percent="6%" class="wpb_row vc_row-fluid vc_row full-width-content vc_row-o-equal-height vc_row-flex vc_row-o-content-top" style="padding-top: calc(100vw * 0.06); padding-bottom: calc(100vw * 0.06); "><div class="row-bg-wrap" data-bg-animation="none" data-bg-overlay="false"><div class="inner-wrap"><div class="row-bg viewport-desktop using-bg-color" style="background-color: #181a1c; "></div></div></div><div class="row_col_wrap_12 col span_12 light left">
+		<div id="fws_6287e67e8b672" data-column-margin="default" data-midnight="light" data-top-percent="6%" data-bottom-percent="6%" class="wpb_row vc_row-fluid vc_row full-width-content vc_row-o-equal-height vc_row-flex vc_row-o-content-top" style="padding-top: calc(100vw * 0.06); padding-bottom: calc(100vw * 0.06); "><div class="row-bg-wrap" data-bg-animation="none" data-bg-overlay="false"><div class="inner-wrap"><div class="row-bg viewport-desktop using-bg-color" style="background-color: #181a1c; "></div></div></div><div class="row_col_wrap_12 col span_12 light left">
 	<div class="vc_col-sm-12 wpb_column column_container vc_column_container col no-extra-padding" data-padding-pos="all" data-has-bg-color="false" data-bg-color="" data-bg-opacity="1" data-animation="" data-delay="0">
 		<div class="vc_column-inner">
 			<div class="wpb_wrapper">
@@ -482,7 +482,7 @@ html:not(.page-trans-loaded) { background-color: #ffffff; }
 		</div>
 	</div> 
 </div></div>
-		<div id="fws_6287e2168505f" data-column-margin="default" data-midnight="dark" data-top-percent="10%" data-bottom-percent="10%" class="wpb_row vc_row-fluid vc_row full-width-section" style="padding-top: calc(100vw * 0.10); padding-bottom: calc(100vw * 0.10); "><div class="row-bg-wrap" data-bg-animation="none" data-bg-overlay="false"><div class="inner-wrap"><div class="row-bg viewport-desktop" style=""></div></div></div><div class="row_col_wrap_12 col span_12 dark left">
+		<div id="fws_6287e67e8c8a3" data-column-margin="default" data-midnight="dark" data-top-percent="10%" data-bottom-percent="10%" class="wpb_row vc_row-fluid vc_row full-width-section" style="padding-top: calc(100vw * 0.10); padding-bottom: calc(100vw * 0.10); "><div class="row-bg-wrap" data-bg-animation="none" data-bg-overlay="false"><div class="inner-wrap"><div class="row-bg viewport-desktop" style=""></div></div></div><div class="row_col_wrap_12 col span_12 dark left">
 	<div class="vc_col-sm-1 wpb_column column_container vc_column_container col no-extra-padding" data-padding-pos="all" data-has-bg-color="false" data-bg-color="" data-bg-opacity="1" data-animation="" data-delay="0">
 		<div class="vc_column-inner">
 			<div class="wpb_wrapper">
@@ -503,7 +503,7 @@ html:not(.page-trans-loaded) { background-color: #ffffff; }
 
 
 
-<div class="divider-wrap" data-alignment="default"><div style="margin-top: 50px; width: 100px; height: 4px; margin-bottom: 50px;" data-width="100" data-animate="yes" data-animation-delay="" data-color="accent-color" class="divider-small-border"></div></div><div id="fws_6287e216857c1" data-midnight="" data-column-margin="default" class="wpb_row vc_row-fluid vc_row inner_row" style=""><div class="row-bg-wrap"> <div class="row-bg"></div> </div><div class="row_col_wrap_12_inner col span_12  left">
+<div class="divider-wrap" data-alignment="default"><div style="margin-top: 50px; width: 100px; height: 4px; margin-bottom: 50px;" data-width="100" data-animate="yes" data-animation-delay="" data-color="accent-color" class="divider-small-border"></div></div><div id="fws_6287e67e8d01c" data-midnight="" data-column-margin="default" class="wpb_row vc_row-fluid vc_row inner_row" style=""><div class="row-bg-wrap"> <div class="row-bg"></div> </div><div class="row_col_wrap_12_inner col span_12  left">
 	<div class="vc_col-sm-4 wpb_column column_container vc_column_container col child_column padding-4-percent" data-padding-pos="all" data-has-bg-color="false" data-bg-color="" data-bg-opacity="1" data-animation="" data-delay="0">
 		<div class="vc_column-inner">
 		<div class="wpb_wrapper">
