--- a/awesometramp-github/portfolio/building-design/index.html
+++ b/awesometramp-github/portfolio/building-design/index.html
@@ -201,7 +201,7 @@ html:not(.page-trans-loaded) { background-color: #ffffff; }
   
 	  
 	<div id="portfolio-extra">
-		<div id="fws_6287e20697343" data-column-margin="default" data-midnight="dark" data-top-percent="10%" data-bottom-percent="1%" class="wpb_row vc_row-fluid vc_row full-width-section" style="padding-top: calc(100vw * 0.10); padding-bottom: calc(100vw * 0.01); "><div class="row-bg-wrap" data-bg-animation="none" data-bg-overlay="false"><div class="inner-wrap"><div class="row-bg viewport-desktop" style=""></div></div></div><div class="row_col_wrap_12 col span_12 dark left">
+		<div id="fws_6287e66ec7b82" data-column-margin="default" data-midnight="dark" data-top-percent="10%" data-bottom-percent="1%" class="wpb_row vc_row-fluid vc_row full-width-section" style="padding-top: calc(100vw * 0.10); padding-bottom: calc(100vw * 0.01); "><div class="row-bg-wrap" data-bg-animation="none" data-bg-overlay="false"><div class="inner-wrap"><div class="row-bg viewport-desktop" style=""></div></div></div><div class="row_col_wrap_12 col span_12 dark left">
 	<div class="vc_col-sm-1 wpb_column column_container vc_column_container col no-extra-padding" data-padding-pos="all" data-has-bg-color="false" data-bg-color="" data-bg-opacity="1" data-animation="" data-delay="0">
 		<div class="vc_column-inner">
 			<div class="wpb_wrapper">
@@ -213,7 +213,7 @@ html:not(.page-trans-loaded) { background-color: #ffffff; }
 	<div class="vc_col-sm-10 wpb_column column_container vc_column_container col no-extra-padding" data-padding-pos="all" data-has-bg-color="false" data-bg-color="" data-bg-opacity="1" data-animation="" data-delay="0">
 		<div class="vc_column-inner">
 			<div class="wpb_wrapper">
-				<div id="fws_6287e20698c94" data-midnight="" data-column-margin="default" class="wpb_row vc_row-fluid vc_row inner_row" style="padding-bottom: 40px; "><div class="row-bg-wrap"> <div class="row-bg"></div> </div><div class="row_col_wrap_12_inner col span_12  left">
+				<div id="fws_6287e66ec90dc" data-midnight="" data-column-margin="default" class="wpb_row vc_row-fluid vc_row inner_row" style="padding-bottom: 40px; "><div class="row-bg-wrap"> <div class="row-bg"></div> </div><div class="row_col_wrap_12_inner col span_12  left">
 	<div class="vc_col-sm-12 wpb_column column_container vc_column_container col child_column no-extra-padding" data-padding-pos="all" data-has-bg-color="false" data-bg-color="" data-bg-opacity="1" data-animation="" data-delay="0">
 		<div class="vc_column-inner">
 		<div class="wpb_wrapper">
@@ -221,7 +221,7 @@ html:not(.page-trans-loaded) { background-color: #ffffff; }
 		</div> 
 	</div>
 	</div> 
-</div></div><div id="fws_6287e20699510" data-midnight="" data-column-margin="default" class="wpb_row vc_row-fluid vc_row inner_row" style=""><div class="row-bg-wrap"> <div class="row-bg"></div> </div><div class="row_col_wrap_12_inner col span_12  left">
+</div></div><div id="fws_6287e66ec999d" data-midnight="" data-column-margin="default" class="wpb_row vc_row-fluid vc_row inner_row" style=""><div class="row-bg-wrap"> <div class="row-bg"></div> </div><div class="row_col_wrap_12_inner col span_12  left">
 	<div class="vc_col-sm-3 wpb_column column_container vc_column_container col child_column no-extra-padding" data-padding-pos="all" data-has-bg-color="false" data-bg-color="" data-bg-opacity="1" data-animation="" data-delay="0">
 		<div class="vc_column-inner">
 		<div class="wpb_wrapper">
@@ -285,7 +285,7 @@ html:not(.page-trans-loaded) { background-color: #ffffff; }
 		</div>
 	</div> 
 </div></div>
-		<div id="fws_6287e2069aa46" data-column-margin="default" data-midnight="dark" data-bottom-percent="7%" class="wpb_row vc_row-fluid vc_row full-width-content vc_row-o-equal-height vc_row-flex vc_row-o-content-top" style="padding-top: 0px; padding-bottom: calc(100vw * 0.07); "><div class="row-bg-wrap" data-bg-animation="none" data-bg-overlay="false"><div class="inner-wrap"><div class="row-bg viewport-desktop" style=""></div></div></div><div class="row_col_wrap_12 col span_12 dark left">
+		<div id="fws_6287e66ecae4e" data-column-margin="default" data-midnight="dark" data-bottom-percent="7%" class="wpb_row vc_row-fluid vc_row full-width-content vc_row-o-equal-height vc_row-flex vc_row-o-content-top" style="padding-top: 0px; padding-bottom: calc(100vw * 0.07); "><div class="row-bg-wrap" data-bg-animation="none" data-bg-overlay="false"><div class="inner-wrap"><div class="row-bg viewport-desktop" style=""></div></div></div><div class="row_col_wrap_12 col span_12 dark left">
 	<div class="vc_col-sm-12 wpb_column column_container vc_column_container col no-extra-padding" data-padding-pos="all" data-has-bg-color="false" data-bg-color="" data-bg-opacity="1" data-animation="" data-delay="0">
 		<div class="vc_column-inner">
 			<div class="wpb_wrapper">
