--- a/awesometramp-github/portfolio/the-snow-fox/index.html
+++ b/awesometramp-github/portfolio/the-snow-fox/index.html
@@ -201,11 +201,11 @@ html:not(.page-trans-loaded) { background-color: #ffffff; }
   
 	  
 	<div id="portfolio-extra">
-		<div id="fws_6287e20c76bb6" data-column-margin="default" data-midnight="dark" data-top-percent="10%" data-bottom-percent="10%" class="wpb_row vc_row-fluid vc_row full-width-section" style="padding-top: calc(100vw * 0.10); padding-bottom: calc(100vw * 0.10); "><div class="row-bg-wrap" data-bg-animation="none" data-bg-overlay="false"><div class="inner-wrap"><div class="row-bg viewport-desktop" style=""></div></div></div><div class="row_col_wrap_12 col span_12 dark left">
+		<div id="fws_6287e674ea2ed" data-column-margin="default" data-midnight="dark" data-top-percent="10%" data-bottom-percent="10%" class="wpb_row vc_row-fluid vc_row full-width-section" style="padding-top: calc(100vw * 0.10); padding-bottom: calc(100vw * 0.10); "><div class="row-bg-wrap" data-bg-animation="none" data-bg-overlay="false"><div class="inner-wrap"><div class="row-bg viewport-desktop" style=""></div></div></div><div class="row_col_wrap_12 col span_12 dark left">
 	<div class="vc_col-sm-12 wpb_column column_container vc_column_container col no-extra-padding" data-padding-pos="all" data-has-bg-color="false" data-bg-color="" data-bg-opacity="1" data-animation="" data-delay="0">
 		<div class="vc_column-inner">
 			<div class="wpb_wrapper">
-				<div id="fws_6287e20c78017" data-midnight="" data-column-margin="default" class="wpb_row vc_row-fluid vc_row inner_row vc_row-o-equal-height vc_row-flex vc_row-o-content-middle" style=""><div class="row-bg-wrap"> <div class="row-bg"></div> </div><div class="row_col_wrap_12_inner col span_12  left">
+				<div id="fws_6287e674eb651" data-midnight="" data-column-margin="default" class="wpb_row vc_row-fluid vc_row inner_row vc_row-o-equal-height vc_row-flex vc_row-o-content-middle" style=""><div class="row-bg-wrap"> <div class="row-bg"></div> </div><div class="row_col_wrap_12_inner col span_12  left">
 	<div class="vc_col-sm-6 wpb_column column_container vc_column_container col child_column no-extra-padding" data-padding-pos="all" data-has-bg-color="false" data-bg-color="" data-bg-opacity="1" data-animation="" data-delay="0">
 		<div class="vc_column-inner">
 		<div class="wpb_wrapper">
@@ -244,11 +244,11 @@ html:not(.page-trans-loaded) { background-color: #ffffff; }
 		</div>
 	</div> 
 </div></div>
-		<div id="fws_6287e20c795b6" data-column-margin="default" data-midnight="dark" class="wpb_row vc_row-fluid vc_row full-width-content vc_row-o-equal-height vc_row-flex vc_row-o-content-top" style="padding-top: 0px; padding-bottom: 0px; "><div class="row-bg-wrap" data-bg-animation="none" data-bg-overlay="false"><div class="inner-wrap"><div class="row-bg viewport-desktop" style=""></div></div></div><div class="row_col_wrap_12 col span_12 dark left flip-in-vertical-wrap">
+		<div id="fws_6287e674ec852" data-column-margin="default" data-midnight="dark" class="wpb_row vc_row-fluid vc_row full-width-content vc_row-o-equal-height vc_row-flex vc_row-o-content-top" style="padding-top: 0px; padding-bottom: 0px; "><div class="row-bg-wrap" data-bg-animation="none" data-bg-overlay="false"><div class="inner-wrap"><div class="row-bg viewport-desktop" style=""></div></div></div><div class="row_col_wrap_12 col span_12 dark left flip-in-vertical-wrap">
 	<div class="vc_col-sm-6 wpb_column column_container vc_column_container col no-extra-padding" data-padding-pos="all" data-has-bg-color="false" data-bg-color="" data-bg-opacity="1" data-animation="" data-delay="0">
 		<div class="vc_column-inner">
 			<div class="wpb_wrapper">
-				<div id="fws_6287e20c79a23" data-midnight="" data-column-margin="default" class="wpb_row vc_row-fluid vc_row inner_row vc_row-o-equal-height vc_row-flex vc_row-o-content-middle" style=""><div class="row-bg-wrap"> <div class="row-bg"></div> </div><div class="row_col_wrap_12_inner col span_12  left flip-in-vertical-wrap">
+				<div id="fws_6287e674ecc4d" data-midnight="" data-column-margin="default" class="wpb_row vc_row-fluid vc_row inner_row vc_row-o-equal-height vc_row-flex vc_row-o-content-middle" style=""><div class="row-bg-wrap"> <div class="row-bg"></div> </div><div class="row_col_wrap_12_inner col span_12  left flip-in-vertical-wrap">
 	<div style="" class="vc_col-sm-6 wpb_column column_container vc_column_container col child_column has-animation padding-7-percent" data-using-bg="true" data-bg-cover="true" data-padding-pos="all" data-has-bg-color="false" data-bg-color="" data-bg-opacity="1" data-animation="flip-in-vertical" data-delay="0">
 		<div class="vc_column-inner"><div class="column-image-bg-wrap column-bg-layer viewport-desktop" data-bg-pos="center center" data-bg-animation="none" data-bg-overlay="false"><div class="inner-wrap"><div class="column-image-bg" style="background-image: url(https://source.unsplash.com/zh7GEuORbUw/600x600); "></div></div></div>
 		<div class="wpb_wrapper">
@@ -268,7 +268,7 @@ html:not(.page-trans-loaded) { background-color: #ffffff; }
 		</div> 
 	</div>
 	</div> 
-</div></div><div id="fws_6287e20c7ac97" data-midnight="" data-column-margin="default" class="wpb_row vc_row-fluid vc_row inner_row vc_row-o-equal-height vc_row-flex vc_row-o-content-middle" style=""><div class="row-bg-wrap"> <div class="row-bg"></div> </div><div class="row_col_wrap_12_inner col span_12  left flip-in-vertical-wrap">
+</div></div><div id="fws_6287e674edd96" data-midnight="" data-column-margin="default" class="wpb_row vc_row-fluid vc_row inner_row vc_row-o-equal-height vc_row-flex vc_row-o-content-middle" style=""><div class="row-bg-wrap"> <div class="row-bg"></div> </div><div class="row_col_wrap_12_inner col span_12  left flip-in-vertical-wrap">
 	<div style="" class="vc_col-sm-6 wpb_column column_container vc_column_container col child_column has-animation padding-7-percent" data-using-bg="true" data-padding-pos="all" data-has-bg-color="true" data-bg-color="#00e25a" data-bg-opacity="1" data-animation="flip-in-vertical" data-delay="0">
 		<div class="vc_column-inner"><div class="column-bg-overlay-wrap column-bg-layer" data-bg-animation="none"><div class="column-bg-overlay" style="opacity: 1; background-color: #00e25a;"></div></div>
 		<div class="wpb_wrapper">
@@ -301,7 +301,7 @@ html:not(.page-trans-loaded) { background-color: #ffffff; }
 		</div>
 	</div> 
 </div></div>
-		<div id="fws_6287e20c7c26f" data-column-margin="default" data-midnight="dark" data-top-percent="8%" data-bottom-percent="8%" class="wpb_row vc_row-fluid vc_row full-width-section" style="padding-top: calc(100vw * 0.08); padding-bottom: calc(100vw * 0.08); "><div class="row-bg-wrap" data-bg-animation="none" data-bg-overlay="false"><div class="inner-wrap"><div class="row-bg viewport-desktop" style=""></div></div></div><div class="row_col_wrap_12 col span_12 dark left">
+		<div id="fws_6287e674ef336" data-column-margin="default" data-midnight="dark" data-top-percent="8%" data-bottom-percent="8%" class="wpb_row vc_row-fluid vc_row full-width-section" style="padding-top: calc(100vw * 0.08); padding-bottom: calc(100vw * 0.08); "><div class="row-bg-wrap" data-bg-animation="none" data-bg-overlay="false"><div class="inner-wrap"><div class="row-bg viewport-desktop" style=""></div></div></div><div class="row_col_wrap_12 col span_12 dark left">
 	<div class="vc_col-sm-6 wpb_column column_container vc_column_container col no-extra-padding" data-padding-pos="all" data-has-bg-color="false" data-bg-color="" data-bg-opacity="1" data-animation="" data-delay="0">
 		<div class="vc_column-inner">
 			<div class="wpb_wrapper">
@@ -327,7 +327,7 @@ html:not(.page-trans-loaded) { background-color: #ffffff; }
 		</div>
 	</div> 
 </div></div>
-		<div id="fws_6287e20c7cde9" data-column-margin="default" data-midnight="light" data-top-percent="20%" data-bottom-percent="20%" class="wpb_row vc_row-fluid vc_row full-width-section parallax_section" style="padding-top: calc(100vw * 0.20); padding-bottom: calc(100vw * 0.20); "><div class="row-bg-wrap" data-bg-animation="none" data-bg-overlay="false"><div class="inner-wrap using-image"><div class="row-bg viewport-desktop using-image" data-parallax-speed="fast" style="background-image: url(https://source.unsplash.com/Yu-qayee34c); background-position: center center; background-repeat: no-repeat; "></div></div></div><div class="row_col_wrap_12 col span_12 light left">
+		<div id="fws_6287e674efed0" data-column-margin="default" data-midnight="light" data-top-percent="20%" data-bottom-percent="20%" class="wpb_row vc_row-fluid vc_row full-width-section parallax_section" style="padding-top: calc(100vw * 0.20); padding-bottom: calc(100vw * 0.20); "><div class="row-bg-wrap" data-bg-animation="none" data-bg-overlay="false"><div class="inner-wrap using-image"><div class="row-bg viewport-desktop using-image" data-parallax-speed="fast" style="background-image: url(https://source.unsplash.com/Yu-qayee34c); background-position: center center; background-repeat: no-repeat; "></div></div></div><div class="row_col_wrap_12 col span_12 light left">
 	<div class="vc_col-sm-12 wpb_column column_container vc_column_container col centered-text no-extra-padding" data-padding-pos="all" data-has-bg-color="false" data-bg-color="" data-bg-opacity="1" data-animation="" data-delay="0">
 		<div class="vc_column-inner">
 			<div class="wpb_wrapper">
@@ -336,7 +336,7 @@ html:not(.page-trans-loaded) { background-color: #ffffff; }
 		</div>
 	</div> 
 </div></div>
-		<div id="fws_6287e20c7d658" data-column-margin="default" data-midnight="dark" data-top-percent="10%" data-bottom-percent="10%" class="wpb_row vc_row-fluid vc_row full-width-section" style="padding-top: calc(100vw * 0.10); padding-bottom: calc(100vw * 0.10); "><div class="row-bg-wrap" data-bg-animation="none" data-bg-overlay="false"><div class="inner-wrap"><div class="row-bg viewport-desktop" style=""></div></div></div><div class="row_col_wrap_12 col span_12 dark left">
+		<div id="fws_6287e674f06ee" data-column-margin="default" data-midnight="dark" data-top-percent="10%" data-bottom-percent="10%" class="wpb_row vc_row-fluid vc_row full-width-section" style="padding-top: calc(100vw * 0.10); padding-bottom: calc(100vw * 0.10); "><div class="row-bg-wrap" data-bg-animation="none" data-bg-overlay="false"><div class="inner-wrap"><div class="row-bg viewport-desktop" style=""></div></div></div><div class="row_col_wrap_12 col span_12 dark left">
 	<div class="vc_col-sm-1 wpb_column column_container vc_column_container col no-extra-padding" data-padding-pos="all" data-has-bg-color="false" data-bg-color="" data-bg-opacity="1" data-animation="" data-delay="0">
 		<div class="vc_column-inner">
 			<div class="wpb_wrapper">
@@ -348,7 +348,7 @@ html:not(.page-trans-loaded) { background-color: #ffffff; }
 	<div class="vc_col-sm-10 wpb_column column_container vc_column_container col centered-text no-extra-padding" data-padding-pos="all" data-has-bg-color="false" data-bg-color="" data-bg-opacity="1" data-animation="" data-delay="0">
 		<div class="vc_column-inner">
 			<div class="wpb_wrapper">
-				<div id="fws_6287e20c7dca5" data-midnight="" data-column-margin="default" class="wpb_row vc_row-fluid vc_row inner_row" style=""><div class="row-bg-wrap"> <div class="row-bg"></div> </div><div class="row_col_wrap_12_inner col span_12  left">
+				<div id="fws_6287e674f0ce8" data-midnight="" data-column-margin="default" class="wpb_row vc_row-fluid vc_row inner_row" style=""><div class="row-bg-wrap"> <div class="row-bg"></div> </div><div class="row_col_wrap_12_inner col span_12  left">
 	<div class="vc_col-sm-4 wpb_column column_container vc_column_container col child_column padding-4-percent" data-padding-pos="all" data-has-bg-color="false" data-bg-color="" data-bg-opacity="1" data-animation="" data-delay="0">
 		<div class="vc_column-inner">
 		<div class="wpb_wrapper">
