--- a/portfolio/night-waves/index.html
+++ b/portfolio/night-waves/index.html
@@ -202,11 +202,11 @@ html:not(.page-trans-loaded) { background-color: #ffffff; }
   
 	  
 	<div id="portfolio-extra">
-		<div id="fws_6287e2152c403" data-column-margin="default" data-midnight="light" data-top-percent="10%" data-bottom-percent="10%" class="wpb_row vc_row-fluid vc_row full-width-section" style="padding-top: calc(100vw * 0.10); padding-bottom: calc(100vw * 0.10); "><div class="row-bg-wrap" data-bg-animation="none" data-bg-overlay="false"><div class="inner-wrap"><div class="row-bg viewport-desktop" style=""></div></div></div><div class="row_col_wrap_12 col span_12 light left flip-in-vertical-wrap">
+		<div id="fws_6287e67d449d9" data-column-margin="default" data-midnight="light" data-top-percent="10%" data-bottom-percent="10%" class="wpb_row vc_row-fluid vc_row full-width-section" style="padding-top: calc(100vw * 0.10); padding-bottom: calc(100vw * 0.10); "><div class="row-bg-wrap" data-bg-animation="none" data-bg-overlay="false"><div class="inner-wrap"><div class="row-bg viewport-desktop" style=""></div></div></div><div class="row_col_wrap_12 col span_12 light left flip-in-vertical-wrap">
 	<div class="vc_col-sm-12 wpb_column column_container vc_column_container col no-extra-padding" data-padding-pos="all" data-has-bg-color="false" data-bg-color="" data-bg-opacity="1" data-animation="" data-delay="0">
 		<div class="vc_column-inner">
 			<div class="wpb_wrapper">
-				<div id="fws_6287e2152d8f4" data-midnight="" data-column-margin="default" class="wpb_row vc_row-fluid vc_row inner_row" style=""><div class="row-bg-wrap"> <div class="row-bg"></div> </div><div class="row_col_wrap_12_inner col span_12  left flip-in-vertical-wrap">
+				<div id="fws_6287e67d45cbb" data-midnight="" data-column-margin="default" class="wpb_row vc_row-fluid vc_row inner_row" style=""><div class="row-bg-wrap"> <div class="row-bg"></div> </div><div class="row_col_wrap_12_inner col span_12  left flip-in-vertical-wrap">
 	<div style="" class="vc_col-sm-2 wpb_column column_container vc_column_container col child_column centered-text has-animation padding-3-percent" data-using-bg="true" data-padding-pos="all" data-has-bg-color="true" data-bg-color="#4800ff" data-bg-opacity="1" data-animation="flip-in-vertical" data-delay="0">
 		<div class="vc_column-inner"><div class="column-bg-overlay-wrap column-bg-layer" data-bg-animation="none"><div class="column-bg-overlay" style="opacity: 1; background-color: #4800ff;"></div></div>
 		<div class="wpb_wrapper">
@@ -308,7 +308,7 @@ html:not(.page-trans-loaded) { background-color: #ffffff; }
 		</div> 
 	</div>
 	</div> 
-</div></div><div id="fws_6287e2152ee3a" data-midnight="" data-column-margin="default" class="wpb_row vc_row-fluid vc_row inner_row" style="padding-top: 7%; "><div class="row-bg-wrap"> <div class="row-bg"></div> </div><div class="row_col_wrap_12_inner col span_12  left">
+</div></div><div id="fws_6287e67d470f8" data-midnight="" data-column-margin="default" class="wpb_row vc_row-fluid vc_row inner_row" style="padding-top: 7%; "><div class="row-bg-wrap"> <div class="row-bg"></div> </div><div class="row_col_wrap_12_inner col span_12  left">
 	<div class="vc_col-sm-4 wpb_column column_container vc_column_container col child_column no-extra-padding" data-padding-pos="all" data-has-bg-color="false" data-bg-color="" data-bg-opacity="1" data-animation="" data-delay="0">
 		<div class="vc_column-inner">
 		<div class="wpb_wrapper">
@@ -340,7 +340,7 @@ a b c d e f g h i j k l m n o p q r s t u v w x y z</p>
 		</div>
 	</div> 
 </div></div>
-		<div id="fws_6287e21530456" data-column-margin="default" data-midnight="dark" data-top-percent="10%" data-bottom-percent="10%" class="wpb_row vc_row-fluid vc_row full-width-section parallax_section" style="padding-top: calc(100vw * 0.10); padding-bottom: calc(100vw * 0.10); "><div class="row-bg-wrap" data-bg-animation="none" data-bg-overlay="true"><div class="inner-wrap"><div class="row-bg viewport-desktop using-bg-color" data-parallax-speed="fast" style="background-color: #ffffff; "></div></div><div class="row-bg-overlay" style="background: linear-gradient(to bottom,rgba(255,255,255,0.001) 25%,#ffffff 100%);  opacity: 1; "></div></div><div class="row_col_wrap_12 col span_12 dark left">
+		<div id="fws_6287e67d4865d" data-column-margin="default" data-midnight="dark" data-top-percent="10%" data-bottom-percent="10%" class="wpb_row vc_row-fluid vc_row full-width-section parallax_section" style="padding-top: calc(100vw * 0.10); padding-bottom: calc(100vw * 0.10); "><div class="row-bg-wrap" data-bg-animation="none" data-bg-overlay="true"><div class="inner-wrap"><div class="row-bg viewport-desktop using-bg-color" data-parallax-speed="fast" style="background-color: #ffffff; "></div></div><div class="row-bg-overlay" style="background: linear-gradient(to bottom,rgba(255,255,255,0.001) 25%,#ffffff 100%);  opacity: 1; "></div></div><div class="row_col_wrap_12 col span_12 dark left">
 	<div class="vc_col-sm-3 wpb_column column_container vc_column_container col no-extra-padding" data-padding-pos="all" data-has-bg-color="false" data-bg-color="" data-bg-opacity="1" data-animation="" data-delay="0">
 		<div class="vc_column-inner">
 			<div class="wpb_wrapper">
@@ -381,7 +381,7 @@ a b c d e f g h i j k l m n o p q r s t u v w x y z</p>
 		</div>
 	</div> 
 </div></div>
-		<div id="fws_6287e215314b7" data-column-margin="default" data-midnight="dark" data-bottom-percent="5%" class="wpb_row vc_row-fluid vc_row full-width-section vc_row-o-equal-height vc_row-flex vc_row-o-content-middle" style="padding-top: 0px; padding-bottom: calc(100vw * 0.05); "><div class="row-bg-wrap" data-bg-animation="none" data-bg-overlay="true"><div class="inner-wrap"><div class="row-bg viewport-desktop using-bg-color" style="background-color: #ffffff; "></div></div><div class="row-bg-overlay" style="background: linear-gradient(to bottom,#ffffff 0%,rgba(255,255,255,0.001) 75%);  opacity: 1; "></div></div><div class="row_col_wrap_12 col span_12 dark left">
+		<div id="fws_6287e67d49434" data-column-margin="default" data-midnight="dark" data-bottom-percent="5%" class="wpb_row vc_row-fluid vc_row full-width-section vc_row-o-equal-height vc_row-flex vc_row-o-content-middle" style="padding-top: 0px; padding-bottom: calc(100vw * 0.05); "><div class="row-bg-wrap" data-bg-animation="none" data-bg-overlay="true"><div class="inner-wrap"><div class="row-bg viewport-desktop using-bg-color" style="background-color: #ffffff; "></div></div><div class="row-bg-overlay" style="background: linear-gradient(to bottom,#ffffff 0%,rgba(255,255,255,0.001) 75%);  opacity: 1; "></div></div><div class="row_col_wrap_12 col span_12 dark left">
 	<div class="vc_col-sm-4 wpb_column column_container vc_column_container col no-extra-padding" data-padding-pos="all" data-has-bg-color="false" data-bg-color="" data-bg-opacity="1" data-animation="" data-delay="0">
 		<div class="vc_column-inner">
 			<div class="wpb_wrapper">
@@ -414,7 +414,7 @@ a b c d e f g h i j k l m n o p q r s t u v w x y z</p>
 		</div>
 	</div> 
 </div></div>
-		<div id="fws_6287e21532477" data-column-margin="default" data-midnight="dark" class="wpb_row vc_row-fluid vc_row" style="padding-top: 0px; padding-bottom: 0px; "><div class="row-bg-wrap" data-bg-animation="none" data-bg-overlay="false"><div class="inner-wrap"><div class="row-bg viewport-desktop" style=""></div></div></div><div class="row_col_wrap_12 col span_12 dark left">
+		<div id="fws_6287e67d4a298" data-column-margin="default" data-midnight="dark" class="wpb_row vc_row-fluid vc_row" style="padding-top: 0px; padding-bottom: 0px; "><div class="row-bg-wrap" data-bg-animation="none" data-bg-overlay="false"><div class="inner-wrap"><div class="row-bg viewport-desktop" style=""></div></div></div><div class="row_col_wrap_12 col span_12 dark left">
 	<div class="vc_col-sm-12 wpb_column column_container vc_column_container col no-extra-padding" data-padding-pos="all" data-has-bg-color="false" data-bg-color="" data-bg-opacity="1" data-animation="" data-delay="0">
 		<div class="vc_column-inner">
 			<div class="wpb_wrapper">
@@ -423,7 +423,7 @@ a b c d e f g h i j k l m n o p q r s t u v w x y z</p>
 		</div>
 	</div> 
 </div></div>
-		<div id="fws_6287e21532996" data-column-margin="default" data-midnight="dark" data-bottom-percent="6%" class="wpb_row vc_row-fluid vc_row full-width-content vc_row-o-equal-height vc_row-flex vc_row-o-content-top" style="padding-top: 0px; padding-bottom: calc(100vw * 0.06); "><div class="row-bg-wrap" data-bg-animation="none" data-bg-overlay="false"><div class="inner-wrap"><div class="row-bg viewport-desktop using-bg-color" style="background-color: #ffffff; "></div></div></div><div class="row_col_wrap_12 col span_12 dark left">
+		<div id="fws_6287e67d4a7c2" data-column-margin="default" data-midnight="dark" data-bottom-percent="6%" class="wpb_row vc_row-fluid vc_row full-width-content vc_row-o-equal-height vc_row-flex vc_row-o-content-top" style="padding-top: 0px; padding-bottom: calc(100vw * 0.06); "><div class="row-bg-wrap" data-bg-animation="none" data-bg-overlay="false"><div class="inner-wrap"><div class="row-bg viewport-desktop using-bg-color" style="background-color: #ffffff; "></div></div></div><div class="row_col_wrap_12 col span_12 dark left">
 	<div class="vc_col-sm-12 wpb_column column_container vc_column_container col no-extra-padding" data-padding-pos="all" data-has-bg-color="false" data-bg-color="" data-bg-opacity="1" data-animation="" data-delay="0">
 		<div class="vc_column-inner">
 			<div class="wpb_wrapper">
@@ -436,11 +436,11 @@ a b c d e f g h i j k l m n o p q r s t u v w x y z</p>
 		</div>
 	</div> 
 </div></div>
-		<div id="fws_6287e21533c60" data-column-margin="default" data-midnight="light" data-top-percent="15%" data-bottom-percent="15%" class="wpb_row vc_row-fluid vc_row full-width-section vc_row-o-equal-height vc_row-flex vc_row-o-content-middle" style="padding-top: calc(100vw * 0.15); padding-bottom: calc(100vw * 0.15); "><div class="row-bg-wrap" data-bg-animation="none" data-bg-overlay="true"><div class="inner-wrap using-image"><div class="row-bg viewport-desktop using-image using-bg-color" style="background-image: url(https://source.unsplash.com/JgOeRuGD_Y4); background-position: left top; background-repeat: no-repeat; background-color: #1e1e1e; "></div></div><div class="row-bg-overlay" style="background-color:#0a0a0a;  opacity: 0.3; "></div></div><div class="row_col_wrap_12 col span_12 light left">
+		<div id="fws_6287e67d4ba50" data-column-margin="default" data-midnight="light" data-top-percent="15%" data-bottom-percent="15%" class="wpb_row vc_row-fluid vc_row full-width-section vc_row-o-equal-height vc_row-flex vc_row-o-content-middle" style="padding-top: calc(100vw * 0.15); padding-bottom: calc(100vw * 0.15); "><div class="row-bg-wrap" data-bg-animation="none" data-bg-overlay="true"><div class="inner-wrap using-image"><div class="row-bg viewport-desktop using-image using-bg-color" style="background-image: url(https://source.unsplash.com/JgOeRuGD_Y4); background-position: left top; background-repeat: no-repeat; background-color: #1e1e1e; "></div></div><div class="row-bg-overlay" style="background-color:#0a0a0a;  opacity: 0.3; "></div></div><div class="row_col_wrap_12 col span_12 light left">
 	<div class="vc_col-sm-12 wpb_column column_container vc_column_container col padding-5-percent" data-padding-pos="all" data-has-bg-color="false" data-bg-color="" data-bg-opacity="1" data-animation="" data-delay="0">
 		<div class="vc_column-inner">
 			<div class="wpb_wrapper">
-				<div id="fws_6287e2153407e" data-midnight="" data-column-margin="default" class="wpb_row vc_row-fluid vc_row inner_row" style=""><div class="row-bg-wrap"> <div class="row-bg"></div> </div><div class="row_col_wrap_12_inner col span_12  left">
+				<div id="fws_6287e67d4be37" data-midnight="" data-column-margin="default" class="wpb_row vc_row-fluid vc_row inner_row" style=""><div class="row-bg-wrap"> <div class="row-bg"></div> </div><div class="row_col_wrap_12_inner col span_12  left">
 	<div class="vc_col-sm-3 wpb_column column_container vc_column_container col child_column no-extra-padding" data-padding-pos="all" data-has-bg-color="false" data-bg-color="" data-bg-opacity="1" data-animation="" data-delay="0">
 		<div class="vc_column-inner">
 		<div class="wpb_wrapper">
@@ -480,7 +480,7 @@ a b c d e f g h i j k l m n o p q r s t u v w x y z</p>
 		</div> 
 	</div>
 	</div> 
-</div></div><div id="fws_6287e21534b28" data-midnight="" data-column-margin="default" class="wpb_row vc_row-fluid vc_row inner_row" style="padding-top: 10%; "><div class="row-bg-wrap"> <div class="row-bg"></div> </div><div class="row_col_wrap_12_inner col span_12  left">
+</div></div><div id="fws_6287e67d4c86c" data-midnight="" data-column-margin="default" class="wpb_row vc_row-fluid vc_row inner_row" style="padding-top: 10%; "><div class="row-bg-wrap"> <div class="row-bg"></div> </div><div class="row_col_wrap_12_inner col span_12  left">
 	<div class="vc_col-sm-4 wpb_column column_container vc_column_container col child_column centered-text padding-4-percent" data-padding-pos="top-bottom" data-has-bg-color="false" data-bg-color="" data-bg-opacity="1" data-animation="" data-delay="0">
 		<div class="vc_column-inner">
 		<div class="wpb_wrapper">
