--- a/portfolio/track-athletic-gear/index.html
+++ b/portfolio/track-athletic-gear/index.html
@@ -199,7 +199,7 @@ html:not(.page-trans-loaded) { background-color: #ffffff; }
   
 	  
 	<div id="portfolio-extra">
-		<div id="fws_6287e217e7b85" data-column-margin="default" data-midnight="dark" data-top-percent="8%" data-bottom-percent="8%" class="wpb_row vc_row-fluid vc_row full-width-section" style="padding-top: calc(100vw * 0.08); padding-bottom: calc(100vw * 0.08); "><div class="row-bg-wrap" data-bg-animation="none" data-bg-overlay="false"><div class="inner-wrap"><div class="row-bg viewport-desktop" style=""></div></div></div><div class="row_col_wrap_12 col span_12 dark left">
+		<div id="fws_6287e67fe3da4" data-column-margin="default" data-midnight="dark" data-top-percent="8%" data-bottom-percent="8%" class="wpb_row vc_row-fluid vc_row full-width-section" style="padding-top: calc(100vw * 0.08); padding-bottom: calc(100vw * 0.08); "><div class="row-bg-wrap" data-bg-animation="none" data-bg-overlay="false"><div class="inner-wrap"><div class="row-bg viewport-desktop" style=""></div></div></div><div class="row_col_wrap_12 col span_12 dark left">
 	<div class="vc_col-sm-2 wpb_column column_container vc_column_container col no-extra-padding" data-padding-pos="all" data-has-bg-color="false" data-bg-color="" data-bg-opacity="1" data-animation="" data-delay="0">
 		<div class="vc_column-inner">
 			<div class="wpb_wrapper">
@@ -211,7 +211,7 @@ html:not(.page-trans-loaded) { background-color: #ffffff; }
 	<div class="vc_col-sm-8 wpb_column column_container vc_column_container col no-extra-padding" data-padding-pos="all" data-has-bg-color="false" data-bg-color="" data-bg-opacity="1" data-animation="" data-delay="0">
 		<div class="vc_column-inner">
 			<div class="wpb_wrapper">
-				<div id="fws_6287e217e9587" data-midnight="" data-column-margin="default" class="wpb_row vc_row-fluid vc_row inner_row" style="padding-bottom: 80px; "><div class="row-bg-wrap"> <div class="row-bg"></div> </div><div class="row_col_wrap_12_inner col span_12  left">
+				<div id="fws_6287e67fe532e" data-midnight="" data-column-margin="default" class="wpb_row vc_row-fluid vc_row inner_row" style="padding-bottom: 80px; "><div class="row-bg-wrap"> <div class="row-bg"></div> </div><div class="row_col_wrap_12_inner col span_12  left">
 	<div class="vc_col-sm-2 wpb_column column_container vc_column_container col child_column no-extra-padding" data-padding-pos="all" data-has-bg-color="false" data-bg-color="" data-bg-opacity="1" data-animation="" data-delay="0">
 		<div class="vc_column-inner">
 		<div class="wpb_wrapper">
@@ -245,7 +245,7 @@ html:not(.page-trans-loaded) { background-color: #ffffff; }
 		</div> 
 	</div>
 	</div> 
-</div></div><div id="fws_6287e217ea430" data-midnight="" data-column-margin="default" class="wpb_row vc_row-fluid vc_row inner_row" style="padding-bottom: 40px; "><div class="row-bg-wrap"> <div class="row-bg"></div> </div><div class="row_col_wrap_12_inner col span_12  left">
+</div></div><div id="fws_6287e67fe5fb9" data-midnight="" data-column-margin="default" class="wpb_row vc_row-fluid vc_row inner_row" style="padding-bottom: 40px; "><div class="row-bg-wrap"> <div class="row-bg"></div> </div><div class="row_col_wrap_12_inner col span_12  left">
 	<div class="vc_col-sm-2 wpb_column column_container vc_column_container col child_column no-extra-padding" data-padding-pos="all" data-has-bg-color="false" data-bg-color="" data-bg-opacity="1" data-animation="" data-delay="0">
 		<div class="vc_column-inner">
 		<div class="wpb_wrapper">
@@ -270,7 +270,7 @@ html:not(.page-trans-loaded) { background-color: #ffffff; }
 		</div> 
 	</div>
 	</div> 
-</div></div><div id="fws_6287e217ead7b" data-midnight="" data-column-margin="default" class="wpb_row vc_row-fluid vc_row inner_row" style=""><div class="row-bg-wrap"> <div class="row-bg"></div> </div><div class="row_col_wrap_12_inner col span_12  left">
+</div></div><div id="fws_6287e67fe676f" data-midnight="" data-column-margin="default" class="wpb_row vc_row-fluid vc_row inner_row" style=""><div class="row-bg-wrap"> <div class="row-bg"></div> </div><div class="row_col_wrap_12_inner col span_12  left">
 	<div class="vc_col-sm-2 wpb_column column_container vc_column_container col child_column no-extra-padding" data-padding-pos="all" data-has-bg-color="false" data-bg-color="" data-bg-opacity="1" data-animation="" data-delay="0">
 		<div class="vc_column-inner">
 		<div class="wpb_wrapper">
@@ -308,7 +308,7 @@ html:not(.page-trans-loaded) { background-color: #ffffff; }
 		</div>
 	</div> 
 </div></div>
-		<div id="fws_6287e217eba6d" data-column-margin="default" data-midnight="dark" data-top-percent="10%" data-bottom-percent="10%" class="wpb_row vc_row-fluid vc_row full-width-section" style="padding-top: calc(100vw * 0.10); padding-bottom: calc(100vw * 0.10); "><div class="row-bg-wrap" data-bg-animation="none" data-bg-overlay="false"><div class="inner-wrap"><div class="row-bg viewport-desktop using-bg-color" style="background-color: #f2f2f2; "></div></div></div><div class="row_col_wrap_12 col span_12 dark left">
+		<div id="fws_6287e67fe734d" data-column-margin="default" data-midnight="dark" data-top-percent="10%" data-bottom-percent="10%" class="wpb_row vc_row-fluid vc_row full-width-section" style="padding-top: calc(100vw * 0.10); padding-bottom: calc(100vw * 0.10); "><div class="row-bg-wrap" data-bg-animation="none" data-bg-overlay="false"><div class="inner-wrap"><div class="row-bg viewport-desktop using-bg-color" style="background-color: #f2f2f2; "></div></div></div><div class="row_col_wrap_12 col span_12 dark left">
 	<div class="vc_col-sm-2 wpb_column column_container vc_column_container col no-extra-padding" data-padding-pos="all" data-has-bg-color="false" data-bg-color="" data-bg-opacity="1" data-animation="" data-delay="0">
 		<div class="vc_column-inner">
 			<div class="wpb_wrapper">
@@ -320,7 +320,7 @@ html:not(.page-trans-loaded) { background-color: #ffffff; }
 	<div class="vc_col-sm-8 wpb_column column_container vc_column_container col no-extra-padding" data-padding-pos="all" data-has-bg-color="false" data-bg-color="" data-bg-opacity="1" data-animation="" data-delay="0">
 		<div class="vc_column-inner">
 			<div class="wpb_wrapper">
-				<div id="fws_6287e217ec161" data-midnight="" data-column-margin="none" class="wpb_row vc_row-fluid vc_row inner_row vc_row-o-equal-height vc_row-flex" style=""><div class="row-bg-wrap"> <div class="row-bg"></div> </div><div class="row_col_wrap_12_inner col span_12  left">
+				<div id="fws_6287e67fe795c" data-midnight="" data-column-margin="none" class="wpb_row vc_row-fluid vc_row inner_row vc_row-o-equal-height vc_row-flex" style=""><div class="row-bg-wrap"> <div class="row-bg"></div> </div><div class="row_col_wrap_12_inner col span_12  left">
 	<div class="vc_col-sm-2 wpb_column column_container vc_column_container col child_column no-extra-padding" data-padding-pos="all" data-has-bg-color="false" data-bg-color="" data-bg-opacity="1" data-animation="" data-delay="0">
 		<div class="vc_column-inner">
 		<div class="wpb_wrapper">
@@ -389,7 +389,7 @@ html:not(.page-trans-loaded) { background-color: #ffffff; }
 		</div> 
 	</div>
 	</div> 
-</div></div><div id="fws_6287e217ed2ed" data-midnight="" data-column-margin="none" class="wpb_row vc_row-fluid vc_row inner_row vc_row-o-equal-height vc_row-flex" style=""><div class="row-bg-wrap"> <div class="row-bg"></div> </div><div class="row_col_wrap_12_inner col span_12  left">
+</div></div><div id="fws_6287e67fe8793" data-midnight="" data-column-margin="none" class="wpb_row vc_row-fluid vc_row inner_row vc_row-o-equal-height vc_row-flex" style=""><div class="row-bg-wrap"> <div class="row-bg"></div> </div><div class="row_col_wrap_12_inner col span_12  left">
 	<div class="vc_col-sm-2 wpb_column column_container vc_column_container col child_column no-extra-padding" data-padding-pos="all" data-has-bg-color="false" data-bg-color="" data-bg-opacity="1" data-animation="" data-delay="0">
 		<div class="vc_column-inner">
 		<div class="wpb_wrapper">
@@ -449,7 +449,7 @@ html:not(.page-trans-loaded) { background-color: #ffffff; }
 		</div> 
 	</div>
 	</div> 
-</div></div><div id="fws_6287e217ee0ff" data-midnight="" data-column-margin="default" class="wpb_row vc_row-fluid vc_row inner_row" style="padding-top: 100px; "><div class="row-bg-wrap"> <div class="row-bg"></div> </div><div class="row_col_wrap_12_inner col span_12  left">
+</div></div><div id="fws_6287e67fe9409" data-midnight="" data-column-margin="default" class="wpb_row vc_row-fluid vc_row inner_row" style="padding-top: 100px; "><div class="row-bg-wrap"> <div class="row-bg"></div> </div><div class="row_col_wrap_12_inner col span_12  left">
 	<div class="vc_col-sm-2 wpb_column column_container vc_column_container col child_column no-extra-padding" data-padding-pos="all" data-has-bg-color="false" data-bg-color="" data-bg-opacity="1" data-animation="" data-delay="0">
 		<div class="vc_column-inner">
 		<div class="wpb_wrapper">
@@ -505,7 +505,7 @@ html:not(.page-trans-loaded) { background-color: #ffffff; }
 		</div>
 	</div> 
 </div></div>
-		<div id="fws_6287e217ef2c6" data-column-margin="default" data-midnight="light" data-top-percent="10%" data-bottom-percent="10%" class="wpb_row vc_row-fluid vc_row full-width-section" style="padding-top: calc(100vw * 0.10); padding-bottom: calc(100vw * 0.10); "><div class="row-bg-wrap" data-bg-animation="none" data-bg-overlay="false"><div class="inner-wrap"><div class="row-bg viewport-desktop using-bg-color" style="background-color: #603dff; "></div></div></div><div class="row_col_wrap_12 col span_12 light left">
+		<div id="fws_6287e67fea518" data-column-margin="default" data-midnight="light" data-top-percent="10%" data-bottom-percent="10%" class="wpb_row vc_row-fluid vc_row full-width-section" style="padding-top: calc(100vw * 0.10); padding-bottom: calc(100vw * 0.10); "><div class="row-bg-wrap" data-bg-animation="none" data-bg-overlay="false"><div class="inner-wrap"><div class="row-bg viewport-desktop using-bg-color" style="background-color: #603dff; "></div></div></div><div class="row_col_wrap_12 col span_12 light left">
 	<div class="vc_col-sm-2 wpb_column column_container vc_column_container col no-extra-padding" data-padding-pos="all" data-has-bg-color="false" data-bg-color="" data-bg-opacity="1" data-animation="" data-delay="0">
 		<div class="vc_column-inner">
 			<div class="wpb_wrapper">
