--- a/project-type/illustration/feed/index.html
+++ b/project-type/illustration/feed/index.html
@@ -12,7 +12,7 @@
 	<atom:link href="https://awesometramp.github.io/awesometramp/project-type/illustration/feed/" rel="self" type="application/rss+xml" />
 	<link>http://awesometramp.github.io/awesometramp/</link>
 	<description>Personal Art Portfolio</description>
-	<lastBuildDate>Wed, 25 May 2022 07:56:54 +0000</lastBuildDate>
+	<lastBuildDate>Tue, 31 May 2022 10:47:22 +0000</lastBuildDate>
 	<language>en-US</language>
 	<sy:updatePeriod>
 	hourly	</sy:updatePeriod>
@@ -20,6 +20,23 @@
 	1	</sy:updateFrequency>
 	<generator>https://wordpress.org/?v=6.0</generator>
 	<item>
+		<title>Space Weirdos &#8211; Splash art</title>
+		<link>https://awesometramp.github.io/awesometramp/portfolio/space-weirdos-splash-art/</link>
+					<comments>https://awesometramp.github.io/awesometramp/portfolio/space-weirdos-splash-art/#respond</comments>
+		
+		<dc:creator><![CDATA[admin]]></dc:creator>
+		<pubDate>Tue, 31 May 2022 10:45:59 +0000</pubDate>
+				<guid isPermaLink="false">https://awesometramp.github.io/awesometramp/?post_type=portfolio&#038;p=507</guid>
+
+					<description><![CDATA[]]></description>
+										<content:encoded><![CDATA[]]></content:encoded>
+					
+					<wfw:commentRss>https://awesometramp.github.io/awesometramp/portfolio/space-weirdos-splash-art/feed/</wfw:commentRss>
+			<slash:comments>0</slash:comments>
+		
+		
+			</item>
+		<item>
 		<title>Board-game -character design</title>
 		<link>https://awesometramp.github.io/awesometramp/portfolio/443/</link>
 					<comments>https://awesometramp.github.io/awesometramp/portfolio/443/#respond</comments>
